2011-12-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFXMLNode.c: Started adding code.

2011-12-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFXMLNode.h:
	* Headers/CoreFoundation/CFXMLParser.h:
	* Source/CFXMLNode.c:
	* Source/CFXMLParser.c:
	* Source/GNUmakefile: Added skeleton for XML types.

2011-12-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTree.c: Added code.

2011-12-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c:
	* Source/CFTree.c:
	* Headers/CoreFoundation/CFTree.h: Add CFTree skeleton.

2011-12-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBag.c:
	* Source/CFDictionary.c:
	* Source/CFSet.c:
	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Redesigned GSHashTable to reduce code 
	duplication.
	* Source/GSPrivate.h: Moved hash functions here.
	* Headers/CoreFoundation/CFBase.h: Made CFIndex and CFTypeID
	a long integer everywhere again, including Windows.

2011-12-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c:
	* Source/CFDate.c:
	* Source/GSPrivate.h: Moved UDate to CFAbsoluteTime conversion macro.
	* Source/CFDateFormatter.c: Added implementation to most functions.

2011-12-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFSet.c:
	* Headers/CoreFoundation/CFSet.h:
	* Source/GNUmakefile: New CFSet based on CFBag.
	* Source/CFBag.c:
	* Headers/CoreFoundation/CFBag.h: Fixed copy-and-paste error.
	* Source/GSHashTable.h:
	* Source/GSHashTable.c: Fixed definition of GSHashTableRemoveValue().

2011-12-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBag.c:
	* Headers/CoreFoundation/CFBag.h: Added CFBag.  Code is based on
	CFDicitonary implementation.

2011-12-07 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/Identifiers.m:
	* Source/GNUmakefile:
	* Source/CFDateFormatter.c:
	* Headers/CoreFoundation/CFDateFormatter.h: Added CFDateFormatter
	skeleton.

2011-12-07 Stefan Bidigaray <stefanbidi@gmail.com>
